--- a/store/blocks/pages/our-stores.jsonc
+++ b/store/blocks/pages/our-stores.jsonc
@@ -1,146 +1,144 @@
 {
-    "store.custom#our-stores": {
-        "blocks": ["flex-layout.row#our-stores"]
-    },
-    "flex-layout.row#our-stores": {
+  "store.custom#our-stores": {
+    "blocks": ["flex-layout.row#our-stores"]
+  },
+  "flex-layout.row#our-stores": {
     "props": {
-        "width": "100%"
+      "width": "100%"
     },
     "children": ["flex-layout.row#main-container-our-stores"]
-    },
-    "flex-layout.row#main-container-our-stores": {
+  },
+  "flex-layout.row#main-container-our-stores": {
     "props": {
-        "blockClass": "our-stores-main",
-        "width": "100%"
+      "blockClass": "our-stores-main",
+      "width": "100%"
     },
+    "children": ["flex-layout.col#container-our-stores"]
+  },
+  "flex-layout.col#container-our-stores": {
     "children": [
-        "flex-layout.col#container-our-stores"
+      "flex-layout.row#breadcrumbStoreLocator",
+      "flex-layout.row#our-stores-tilte",
+      "flex-layout.row#our-stores-subtitle",
+      "flex-layout.row#our-stores-content"
     ]
-    },
-    "flex-layout.col#container-our-stores": {
-    "children": [
-        "flex-layout.row#breadcrumb",
-        "flex-layout.row#our-stores-tilte",
-        "flex-layout.row#our-stores-subtitle",
-        "flex-layout.row#our-stores-content"
-    ]
-    },
-    "flex-layout.row#our-stores-tilte": {
-        "children": ["rich-text#our-stores-tilte"],
-        "props": {
-            "blockClass": "our-stores-title"
-        }
-    },
-    "rich-text#our-stores-tilte": {
-        "props": {
-          "text": "# Tutti gli store",
-          "blockClass": "our-stores-title",
-          "textAlignment": "CENTER",
-          "textPosition": "CENTER"
-        }
-    },
-    "flex-layout.row#our-stores-subtitle": {
-        "children": ["rich-text#our-stores-subtitle"],
-        "props": {
-            "blockClass": "our-stores-subtitle"
-        }
-    },
-    "rich-text#our-stores-subtitle": {
-        "props": {
-          "text": "### Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
-          "blockClass": "our-stores-subtitle",
-          "textAlignment": "CENTER",
-          "textPosition": "CENTER"
-        }
-    },
-    "flex-layout.row#our-stores-content": {
-        "children": [
-            "flex-layout.col#our-stores-col1",
-            "flex-layout.col#our-stores-col2",
-            "flex-layout.col#our-stores-col3",
-            "flex-layout.col#our-stores-col4"
-        ]
-    },
-    "flex-layout.col#our-stores-col1": {
-        "children": [
-            "rich-text#our-stores-item1",
-            "rich-text#our-stores-item2",
-            "rich-text#our-stores-item3",
-            "rich-text#our-stores-item4",
-            "rich-text#our-stores-item5",
-            "rich-text#our-stores-item6"
-        ]
-    },
-    "flex-layout.col#our-stores-col2": {
-        "children": [
-            "rich-text#our-stores-item1",
-            "rich-text#our-stores-item2",
-            "rich-text#our-stores-item3",
-            "rich-text#our-stores-item4",
-            "rich-text#our-stores-item5",
-            "rich-text#our-stores-item6"
-        ]
-    },
-    "flex-layout.col#our-stores-col3": {
-        "children": [
-            "rich-text#our-stores-item1",
-            "rich-text#our-stores-item2",
-            "rich-text#our-stores-item3",
-            "rich-text#our-stores-item4",
-            "rich-text#our-stores-item5",
-            "rich-text#our-stores-item6"
-        ]
-    },
-    "flex-layout.col#our-stores-col4": {
-        "children": [
-            "rich-text#our-stores-item1",
-            "rich-text#our-stores-item2",
-            "rich-text#our-stores-item3",
-            "rich-text#our-stores-item4",
-            "rich-text#our-stores-item5",
-            "rich-text#our-stores-item6"
-        ]
-    },
-    "rich-text#our-stores-item1":{
-        "title": "Card-Item",
-        "props": {
-            "text": "#### Store lorem ipsum dolor sit amet \n Via dei Tigli 24, Roma 00159 (RM) \n +06 00000000 \n nomestore@mail.com",
-            "blockClass": "our-stores-text"
-        }
-    },
-    "rich-text#our-stores-item2":{
-        "title": "Card-Item",
-        "props": {
-            "text": "#### Store lorem ipsum dolor sit amet \n Via dei Tigli 24, Roma 00159 (RM) \n +06 00000000 \n nomestore@mail.com",
-            "blockClass": "our-stores-text"
-        }
-    },
-    "rich-text#our-stores-item3":{
-        "title": "Card-Item",
-        "props": {
-            "text": "#### Store lorem ipsum dolor sit amet \n Via dei Tigli 24, Roma 00159 (RM) \n +06 00000000 \n nomestore@mail.com",
-            "blockClass": "our-stores-text"
-        }
-    },
-    "rich-text#our-stores-item4":{
-        "title": "Card-Item",
-        "props": {
-            "text": "#### Store lorem ipsum dolor sit amet \n Via dei Tigli 24, Roma 00159 (RM) \n +06 00000000 \n nomestore@mail.com",
-            "blockClass": "our-stores-text"
-        }
-    },
-    "rich-text#our-stores-item5":{
-        "title": "Card-Item",
-        "props": {
-            "text": "#### Store lorem ipsum dolor sit amet \n Via dei Tigli 24, Roma 00159 (RM) \n +06 00000000 \n nomestore@mail.com",
-            "blockClass": "our-stores-text"
-        }
-    },
-    "rich-text#our-stores-item6":{
-        "title": "Card-Item",
-        "props": {
-            "text": "#### Store lorem ipsum dolor sit amet \n Via dei Tigli 24, Roma 00159 (RM) \n +06 00000000 \n nomestore@mail.com",
-            "blockClass": "our-stores-text"
-        }
+  },
+  "flex-layout.row#our-stores-tilte": {
+    "children": ["rich-text#our-stores-tilte"],
+    "props": {
+      "blockClass": "our-stores-title"
     }
+  },
+  "rich-text#our-stores-tilte": {
+    "props": {
+      "text": "# Tutti gli store",
+      "blockClass": "our-stores-title",
+      "textAlignment": "CENTER",
+      "textPosition": "CENTER"
+    }
+  },
+  "flex-layout.row#our-stores-subtitle": {
+    "children": ["rich-text#our-stores-subtitle"],
+    "props": {
+      "blockClass": "our-stores-subtitle"
+    }
+  },
+  "rich-text#our-stores-subtitle": {
+    "props": {
+      "text": "### Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
+      "blockClass": "our-stores-subtitle",
+      "textAlignment": "CENTER",
+      "textPosition": "CENTER"
+    }
+  },
+  "flex-layout.row#our-stores-content": {
+    "children": [
+      "flex-layout.col#our-stores-col1",
+      "flex-layout.col#our-stores-col2",
+      "flex-layout.col#our-stores-col3",
+      "flex-layout.col#our-stores-col4"
+    ]
+  },
+  "flex-layout.col#our-stores-col1": {
+    "children": [
+      "rich-text#our-stores-item1",
+      "rich-text#our-stores-item2",
+      "rich-text#our-stores-item3",
+      "rich-text#our-stores-item4",
+      "rich-text#our-stores-item5",
+      "rich-text#our-stores-item6"
+    ]
+  },
+  "flex-layout.col#our-stores-col2": {
+    "children": [
+      "rich-text#our-stores-item1",
+      "rich-text#our-stores-item2",
+      "rich-text#our-stores-item3",
+      "rich-text#our-stores-item4",
+      "rich-text#our-stores-item5",
+      "rich-text#our-stores-item6"
+    ]
+  },
+  "flex-layout.col#our-stores-col3": {
+    "children": [
+      "rich-text#our-stores-item1",
+      "rich-text#our-stores-item2",
+      "rich-text#our-stores-item3",
+      "rich-text#our-stores-item4",
+      "rich-text#our-stores-item5",
+      "rich-text#our-stores-item6"
+    ]
+  },
+  "flex-layout.col#our-stores-col4": {
+    "children": [
+      "rich-text#our-stores-item1",
+      "rich-text#our-stores-item2",
+      "rich-text#our-stores-item3",
+      "rich-text#our-stores-item4",
+      "rich-text#our-stores-item5",
+      "rich-text#our-stores-item6"
+    ]
+  },
+  "rich-text#our-stores-item1": {
+    "title": "Card-Item",
+    "props": {
+      "text": "#### Store lorem ipsum dolor sit amet \n Via dei Tigli 24, Roma 00159 (RM) \n +06 00000000 \n nomestore@mail.com",
+      "blockClass": "our-stores-text"
+    }
+  },
+  "rich-text#our-stores-item2": {
+    "title": "Card-Item",
+    "props": {
+      "text": "#### Store lorem ipsum dolor sit amet \n Via dei Tigli 24, Roma 00159 (RM) \n +06 00000000 \n nomestore@mail.com",
+      "blockClass": "our-stores-text"
+    }
+  },
+  "rich-text#our-stores-item3": {
+    "title": "Card-Item",
+    "props": {
+      "text": "#### Store lorem ipsum dolor sit amet \n Via dei Tigli 24, Roma 00159 (RM) \n +06 00000000 \n nomestore@mail.com",
+      "blockClass": "our-stores-text"
+    }
+  },
+  "rich-text#our-stores-item4": {
+    "title": "Card-Item",
+    "props": {
+      "text": "#### Store lorem ipsum dolor sit amet \n Via dei Tigli 24, Roma 00159 (RM) \n +06 00000000 \n nomestore@mail.com",
+      "blockClass": "our-stores-text"
+    }
+  },
+  "rich-text#our-stores-item5": {
+    "title": "Card-Item",
+    "props": {
+      "text": "#### Store lorem ipsum dolor sit amet \n Via dei Tigli 24, Roma 00159 (RM) \n +06 00000000 \n nomestore@mail.com",
+      "blockClass": "our-stores-text"
+    }
+  },
+  "rich-text#our-stores-item6": {
+    "title": "Card-Item",
+    "props": {
+      "text": "#### Store lorem ipsum dolor sit amet \n Via dei Tigli 24, Roma 00159 (RM) \n +06 00000000 \n nomestore@mail.com",
+      "blockClass": "our-stores-text"
+    }
+  }
 }
