[feature/22081] added 'pagination': 'infiniteScroll' prop on search-result-layout

--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -1,6 +1,11 @@
 {
   "store.search": {
-    "blocks": ["search-result-layout"],
+    "blocks": [
+      "search-result-layout",
+      "flex-layout.row#sectionSeo1",
+      "flex-layout.row#sectionSeo2",
+      "flex-layout.row#sectionSeo3"
+    ],
     "props": {
       "context": {
         "skusFilter": "ALL",
@@ -10,7 +15,12 @@
     }
   },
   "store.search#brand": {
-    "blocks": ["search-result-layout"],
+    "blocks": [
+      "search-result-layout",
+      "flex-layout.row#sectionSeo1",
+      "flex-layout.row#sectionSeo2",
+      "flex-layout.row#sectionSeo3"
+    ],
     "props": {
       "context": {
         "orderByField": "OrderByReleaseDateDESC",
@@ -22,7 +32,12 @@
     }
   },
   "store.search#department": {
-    "blocks": ["search-result-layout"],
+    "blocks": [
+      "search-result-layout",
+      "flex-layout.row#sectionSeo1",
+      "flex-layout.row#sectionSeo2",
+      "flex-layout.row#sectionSeo3"
+    ],
     "props": {
       "context": {
         "skusFilter": "ALL",
@@ -33,7 +48,12 @@
     }
   },
   "store.search#category": {
-    "blocks": ["search-result-layout"],
+    "blocks": [
+      "search-result-layout",
+      "flex-layout.row#sectionSeo1",
+      "flex-layout.row#sectionSeo2",
+      "flex-layout.row#sectionSeo3"
+    ],
     "props": {
       "context": {
         "skusFilter": "ALL",
@@ -44,7 +64,12 @@
     }
   },
   "store.search#subcategory": {
-    "blocks": ["search-result-layout"],
+    "blocks": [
+      "search-result-layout",
+      "flex-layout.row#sectionSeo1",
+      "flex-layout.row#sectionSeo2",
+      "flex-layout.row#sectionSeo3"
+    ],
     "props": {
       "context": {
         "skusFilter": "ALL",
@@ -70,13 +95,10 @@
       "flex-layout.row#searchTitle",
       "flex-layout.row#searchinfo",
       "flex-layout.row#searchLayout",
-      "flex-layout.row#sectionSeo1",
-      "flex-layout.row#sectionSeo2",
-      "flex-layout.row#sectionSeo3",
       "back-to-top-button"
     ],
     "props": {
-      "pagination": "show-more",
+      "pagination": "infiniteScroll",
       "preventRouteChange": false,
       "mobileLayout": {
         "mode1": "small",
@@ -286,7 +308,11 @@
   //   }
   // },
   "flex-layout.row#searchinfo": {
-    "children": ["hide-filter", "search-products-count-per-page", "order-by.v2"],
+    "children": [
+      "hide-filter",
+      "search-products-count-per-page",
+      "order-by.v2"
+    ],
     "props": {
       "colSizing": "auto",
       "blockClass": "searchHeadInfo"
@@ -323,13 +349,10 @@
       "image#banner-sponsored-mobile",
       "flex-layout.row#contentmobile",
       "flex-layout.row#fetchmore",
-      "flex-layout.row#sectionSeo1",
-      "flex-layout.row#sectionSeo2",
-      "flex-layout.row#sectionSeo3",
       "back-to-top-button"
     ],
     "props": {
-      "pagination": "show-more",
+      "pagination": "infiniteScroll",
       "mobileLayout": {
         "mode1": "small",
         "mode2": "normal"
