--- a/store/blocks/product.jsonc
+++ b/store/blocks/product.jsonc
@@ -9,10 +9,13 @@
     "children": [
       "flex-layout.row#breadcrumb",
       "flex-layout.row#product-main",
+      "flex-layout.row#product-shelf-1-title",
       "flex-layout.row#related-products",
+      "flex-layout.row#product-shelf-2-title",
       "flex-layout.row#also-view",
       "flex-layout.row#descriptionSpecification",
       "flex-layout.row#faq",
+      "flex-layout.row#product-shelf-3-title",
       "flex-layout.row#sponsored-products"
     ]
   },
@@ -20,11 +23,51 @@
     "children": [
       "flex-layout.row#breadcrumb",
       "flex-layout.row#product-main-mobile",
+      "flex-layout.row#product-shelf-1-title",
       "flex-layout.row#related-products",
+      "flex-layout.row#product-shelf-2-title",
       "flex-layout.row#also-view",
       "flex-layout.row#descriptionSpecification",
       "flex-layout.row#faq",
+      "flex-layout.row#product-shelf-3-title",
       "flex-layout.row#sponsored-products"
     ]
+  },
+
+  "flex-layout.row#product-shelf-1-title": {
+    "children": ["rich-text#product-shelf-1-title"],
+    "props": {
+      "blockClass": "product-shelf-1-title"
+    }
+  },
+  "rich-text#product-shelf-1-title": {
+    "props": {
+      "blockClass": "product-shelf-1-title",
+      "text": "## Prodotti correlati"
+    }
+  },
+  "flex-layout.row#product-shelf-2-title": {
+    "children": ["rich-text#product-shelf-2-title"],
+    "props": {
+      "blockClass": "product-shelf-2-title"
+    }
+  },
+  "rich-text#product-shelf-2-title": {
+    "props": {
+      "blockClass": "product-shelf-2-title",
+      "text": "## Potrebbe interessarti anche"
+    }
+  },
+  "flex-layout.row#product-shelf-3-title": {
+    "children": ["rich-text#product-shelf-3-title"],
+    "props": {
+      "blockClass": "product-shelf-3-title"
+    }
+  },
+  "rich-text#product-shelf-3-title": {
+    "props": {
+      "blockClass": "product-shelf-3-title",
+      "text": "## Prodotti sponsorizzati"
+    }
   }
 }
