--- a/store/blocks/search.jsonc
+++ b/store/blocks/search.jsonc
@@ -95,10 +95,11 @@
       "flex-layout.row#searchTitle",
       "flex-layout.row#searchinfo",
       "flex-layout.row#searchLayout",
-      "back-to-top-button"
+      "back-to-top-button",
+      "infinite-scroll"
     ],
     "props": {
-      "pagination": "infiniteScroll",
+      "pagination": "show-more",
       "preventRouteChange": false,
       "mobileLayout": {
         "mode1": "small",
@@ -177,7 +178,7 @@
     "props": {
       "src": "https://via.placeholder.com/980x221/ccc/fff",
       "alt": "banner-sponsored",
-      "maxWidth": "1312px",
+      "maxWidth": "135px",
       "blockClass": "banner-sponsored"
     }
   },
@@ -349,10 +350,11 @@
       "image#banner-sponsored-mobile",
       "flex-layout.row#contentmobile",
       "flex-layout.row#fetchmore",
-      "back-to-top-button"
+      "back-to-top-button",
+      "infinite-scroll"
     ],
     "props": {
-      "pagination": "infiniteScroll",
+      "pagination": "show-more",
       "mobileLayout": {
         "mode1": "small",
         "mode2": "normal"
