[bugfix/22085] Adjustments of stylization at home page

--- a/store/blocks/header/headerDesktop.jsonc
+++ b/store/blocks/header/headerDesktop.jsonc
@@ -172,8 +172,8 @@
   },
   "image#wishlist": {
     "props": {
-      "src": "assets/icons/heartIcon.svg",
-      "width": "50px"
+      "src": "assets/icons/heart-icon.svg",
+      "width": "40px"
     }
   }
 }
