[qa/22105] home sliders adjusted on mobile

--- a/store/blocks/footer/upperFooterDesktop.jsonc
+++ b/store/blocks/footer/upperFooterDesktop.jsonc
@@ -150,6 +150,7 @@
       },
       "showNavigationArrows": "desktopOnly",
       "showPaginationDots": "never",
+      //"usePagination": false,
       "autoplay": false,
       "infinity": false,
       "navigationStep": 1,
