BRIC-58 user icon dot removal

--- a/store/blocks/header/headerDesktop.jsonc
+++ b/store/blocks/header/headerDesktop.jsonc
@@ -151,7 +151,7 @@
       "logInButtonBehavior": "link",
       "showPasswordVerificationIntoTooltip": true,
       "showIconProfile": true,
-      "iconLabel": ".",
+      "iconLabel": " ",
       "blockClass": "login"
     }
   },
